remove comments and clean up
Signed-off-by: TimothyW553 <timothy.art@gmail.com>